@@ -1,20 +1,23 @@
-## RQuantLib function DiscountCurve
+##  RQuantLib function DiscountCurve
 ##
-## Copyright (C) 2005         Dominick Samperi
-## Copyright (C) 2007 - 2009  Dirk Eddelbuettel
-## Copyright (C) 2009 - 2010  Dirk Eddelbuettel and Khanh Nguyen
+##  Copyright (C) 2005         Dominick Samperi
+##  Copyright (C) 2007 - 2014  Dirk Eddelbuettel
+##  Copyright (C) 2009 - 2010  Dirk Eddelbuettel and Khanh Nguyen
 ##
-## $Id: discount.R,v 1.3 2007/12/31 02:11:19 edd Exp $
+##  This file is part of RQuantLib.
 ##
-## This program is part of the RQuantLib library for R (GNU S).
-## It is made available under the terms of the GNU General Public
-## License, version 2, or at your option, any later version.
+##  RQuantLib is free software: you can redistribute it and/or modify
+##  it under the terms of the GNU General Public License as published by
+##  the Free Software Foundation, either version 2 of the License, or
+##  (at your option) any later version.
 ##
-## This program is distributed in the hope that it will be
-## useful, but WITHOUT ANY WARRANTY; without even the implied
-## warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
-## PURPOSE.  See the GNU General Public License for more
-## details.
+##  RQuantLib is distributed in the hope that it will be useful,
+##  but WITHOUT ANY WARRANTY; without even the implied warranty of
+##  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+##  GNU General Public License for more details.
+##
+##  You should have received a copy of the GNU General Public License
+##  along with RQuantLib.  If not, see <http://www.gnu.org/licenses/>.
 
 DiscountCurve <- function(params, tsQuotes, times=seq(0,10,.1)) {
     UseMethod("DiscountCurve")
@@ -23,28 +26,30 @@ DiscountCurve <- function(params, tsQuotes, times=seq(0,10,.1)) {
 DiscountCurve.default <- function(params, tsQuotes, times=seq(0,10,.1)) {
 
     ## Check that params is properly formatted.
-    if(!is.list(params) || length(params) == 0) {
-        stop("The params parameter must be a non-empty list");
+    if (!is.list(params) || length(params) == 0) {
+        stop("The params parameter must be a non-empty list", call.=FALSE)
     }
 
     ## Check that the term structure quotes are properly formatted.
-    if(!is.list(tsQuotes) || length(tsQuotes) == 0) {
-        stop("Term structure quotes must be a non-empty list")
+    if (!is.list(tsQuotes) || length(tsQuotes) == 0) {
+        stop("Term structure quotes must be a non-empty list", call.=FALSE)
     }
-    if(length(tsQuotes) != length(names(tsQuotes))) {
-        stop("Term structure quotes must include labels")
+    if (length(tsQuotes) != length(names(tsQuotes))) {
+        stop("Term structure quotes must include labels", call.=FALSE)
     }
-    if(!is.numeric(unlist(tsQuotes))) {
-        stop("Term structure quotes must have numeric values")
+    if (!is.numeric(unlist(tsQuotes))) {
+        stop("Term structure quotes must have numeric values", call.=FALSE)
     }
 
     ## Check the times vector
-    if(!is.numeric(times) || length(times) == 0) {
-        stop("The times parameter must be a non-emptry numeric vector")
+    if (!is.numeric(times) || length(times) == 0) {
+        stop("The times parameter must be a non-emptry numeric vector", call.=FALSE)
     }
 
     ## Finally ready to make the call...
-    val <- .Call("DiscountCurve", params, tsQuotes, times, PACKAGE="RQuantLib")
+    #val <- .Call("DiscountCurve", params, tsQuotes, times, PACKAGE="RQuantLib")
+    val <- discountCurveEngine(params, tsQuotes, times)
+
     val[["table"]] <- as.data.frame(val[["table"]])  ## Windows all of a sudden needs this
     class(val) <- c("DiscountCurve")
     val
